Fix navigation flickering animation

--- a/src/app/pages/home/navigation/navigation.component.scss
+++ b/src/app/pages/home/navigation/navigation.component.scss
@@ -7,7 +7,6 @@
 }
 
 .navbar {
-  padding: 0 10%;
   background: white;
   transition: 0.2s ease;
   
